--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #131313;
+}
+
+.homepage {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  margin-top: 3rem;
+}
+.homepage .heading {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+.homepage .heading h1 {
+  color: white;
+}
+.homepage .heading h2 {
+  color: #565ed7;
+}
+.homepage .continent-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 0 4rem ;
+}
+.image-container {
+  width: 20rem;
+  height: 20rem;
+  overflow: hidden;
+  border-radius: 5px;
+}
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.continent-card {
+  color: white;
+  position: relative;
+  width: 20rem;
+  height: 20rem;
+  cursor: pointer;
+}
+.detail-container {
+  position: absolute;
+  bottom: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  left: 1rem;
+}
+.homepage .heading .continent-heading{
+  color:white;
 }
